--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>csmall-stock</module>
         <module>csmall-commons</module>
         <module>csmall-business</module>
+        <module>csmall-cart</module>
+        <module>csmall-order</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
