--- a/csmall-stock/csmall-stock-webapi/src/main/resources/application-dev.yml
+++ b/csmall-stock/csmall-stock-webapi/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/csmall_db?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true
     username: root
-    password: root
+    password: 123
 dubbo:
   protocol:
     port: -1
