--- a/csmall-stock/csmall-stock-webapi/src/main/resources/application-dev.yml
+++ b/csmall-stock/csmall-stock-webapi/src/main/resources/application-dev.yml
@@ -19,3 +19,11 @@ dubbo:
     address: nacos://localhost:8848
   consumer:
     check: false
+
+seata:
+  tx-service-group: csmall_group
+  service:
+    vgroup-mapping:
+      csmall_group: default
+  grouplist:
+    default: localhost:8091
