--- a/csmall-business/pom.xml
+++ b/csmall-business/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>csmall-order-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 
